Step 10: Enabled add bookmark functionality

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -3,3 +3,8 @@
     <li><%= bookmark %></li>
   <% end %>
 </ul>
+
+<form action="/add_bookmark" method="post">
+  <input type="text" name="url" />
+  <input type="submit" value="Add">
+</form>
