Chapter 11: wrapped table data in a bookmark object, updated program to display titles instead of urls

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,10 +1,11 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li><a href=<%= bookmark.url %>><%=bookmark.title%></a></li>
   <% end %>
 </ul>
 
 <form action="/add_bookmark" method="post">
   <input type="text" name="url" />
+  <input type="text" name="title">
   <input type="submit" value="Add">
 </form>
